--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -8,20 +8,24 @@
         text-decoration: none;
     }
     .table{
-        border: 1px solid grey;
+        border: 1px solid rgb(3, 3, 3);
         border-radius: 20px;
     }
     .col{
         border: 1px solid grey;
 
     }
+    h2, h3{
+        font-family: cursive;
+    }
+    
 </style>
 {% endblock %}
 
 
 {% block body%}
 
-<div class="container my-2">
+<div class="container mt-3">
     <div>
         <h2 class="text-center"><a href="/" class="text-dark"> Services</a></h2>
 
@@ -43,12 +47,15 @@
                     <td>{{i.service_desc|slice:'0:50'}}...</td>
                 </tr>
                 {% endfor %}
+                <tr>
+                    <td scope="row" class="text-center" colspan="4"><h3 class="text-primary">Total :: {{total_services}} services</h3></td>
+                </tr>
 
             </tbody>
         </table>
     </div>
 
-    
+    <hr>
 
     <div>
         <h2 class="text-center"><a href="/" class="text-dark">All Services Man</a></h2>
@@ -58,11 +65,11 @@
             <thead>
                 <tr>
                     <th scope="col">S.No</th>
-                    <th scope="col" class="col">username</th>
+                    <th scope="col" class="col">Username</th>
                     <th scope="col" class="col">First Name</th>
                     <th scope="col" class="col">Last Name</th>
-                    <th scope="col" class="col">email</th>
-                    <th scope="col" class="col">service</th>
+                    <th scope="col" class="col">Email</th>
+                    <th scope="col" class="col">Service</th>
 
                 </tr>
             </thead>
@@ -77,11 +84,13 @@
                     <td class="col">{{i.service}}</td>
                 </tr>
                 {% endfor %}
-                
+                <tr>
+                    <td scope="row" class="text-center " colspan="6"><h3 class="text-primary">Total :: {{total_users}} Service Man</h3></td>
+                </tr>
             </tbody>
         </table>
     </div>
-
+<hr>
     <div>
         <h2 class="text-center"><a href="/" class="text-dark"> All Customers</a></h2>
 
@@ -90,7 +99,7 @@
             <thead>
                 <tr>
                     <th scope="col" class="col">S.No</th>
-                    <th scope="col" class="col">username</th>
+                    <th scope="col" class="col">Username</th>
                     <th scope="col" class="col">First Name</th>
                     <th scope="col" class="col">Last Name</th>
                     <th scope="col" class="col">Email</th>
@@ -108,10 +117,13 @@
                     <td class="col">{{i.address}}</td>
                 </tr>
                 {% endfor %}
+                <tr>
+                    <td scope="row" class="text-center " colspan="6"><h3 class="text-primary">Total :: {{total_customers}} Customers</h3></td>
+                </tr>
                 
             </tbody>
         </table>
     </div>
 </div>
-
+<hr>
 {% endblock body %}
