--- a/templates/service_view.html
+++ b/templates/service_view.html
@@ -4,13 +4,6 @@
 {% block body %}
 <div class="container-fluid">
 
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{{message.tags}}" role="alert">
-        <strong> {{message}}</strong>
-    </div>
-    {% endfor %}
-    {% endif %}
 
     <div class="container mt-5">
 
@@ -45,59 +38,33 @@
             <h3>Available Users:: (Any One will contact you)</h3>
 
             <div class="row mt-2">
+
+                {% for user in users %}
                 <div class="col-md-6">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card card-body my-2">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div>
+
+                                    <img src="{{user.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
+                                    <p class="text-center">@{{user.user.username}}</p>
+                                </div>
+                                
+                            </div>
+                            <div class="col-md-8">
+                                <h3>{{user.user.first_name}} {{user.user.last_name}}</h3>
+                                <p>Email: {{user.user.email}}</p>
+                                <p>Address: {{user.address}}</p>
+                                <p>Contact: {{user.phone}}</p>
+                                <p>Service: {{user.service.service_name}}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
+
+                {% endfor %}
+
             </div>
         </div>
 
