--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -16,6 +16,7 @@
     a {
         text-decoration: none;
         color: black;
+        font-family: fantasy;
     }
 
     a:hover {
@@ -30,7 +31,7 @@
         <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    Services
+                    <a>User Profiles</a>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
@@ -48,10 +49,12 @@
                 </ul>
                 <a href="{% url 'add_service' %}" class="btn btn-outline-dark p-2 m-3">Add Service</a>
 
+
             </div>
         </div>
         <div class="col-md-9">
             <div class="row">
+                <h2 class="text-center"><a>{{category}} ({{count}})</h2>
                 {% for service in services %}
                 <div class="col-md-4">
                     <div class="card my-2">
@@ -61,69 +64,70 @@
                         </div>
                         <a href="/services/{{service.service_id}}" class="btn btn-outline-primary btn-sm m-1">Quick
                             View</a>
-                        <a href="#" class="btn btn-outline-danger btn-sm m-1">Delete</a>
+                        <button class="btn btn-outline-danger btn-sm m-1 deleteBtn">Delete</button>
+
                     </div>
                 </div>
 
                 {% endfor %}
 
                 {% for customer in customers %}
-                <div class="col-md-4">
-                    <div class="card my-2">
-                        <img src="{{customer.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
-                        <div class="card-body">
-                            <small>Category: {{customer.user.username}}</small>
-                        </div>
-                        <a href="/profile" class="btn btn-outline-primary btn-sm m-1">View Profile</a>
-                        <a href="#" class="btn btn-outline-danger btn-sm m-1">Delete</a>
+                
+                <div class="col-md-6">
+                        <div class="card card-body my-2">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div>
 
+                                    <img src="{{customer.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
+                                    <p class="text-center">@{{customer.user.username}}</p>
+                                </div>
+                                <div>
+
+                                    <a class="btn btn-outline-danger btn-sm m-2 deleteBtn">Delete</a>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <h3>{{customer.user.first_name}} {{customer.user.last_name}}</h3>
+                                <p>Email: {{customer.user.email}}</p>
+                                <p>Address: {{customer.address}}</p>
+                                <p>Contact: {{customer.phone}}</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 {% endfor %}
 
                 {% for user in users %}
-                <div class="col-md-4">
-                    <div class="card my-2">
-                        <img src="{{user.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
-                        <div class="card-body">
-                            <small>Category: {{user.user.username}}</small>
-                        </div>
-                        <a href="/profile" class="btn btn-outline-primary btn-sm m-1">View Profile</a>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
-                            Launch demo modal
-                        </button>
+                <div class="col-md-6">
+                    <div class="card card-body my-2">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div>
 
+                                <img src="{{user.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
+                                <p class="text-center">@{{user.user.username}}</p>
+                            </div>
+                            <div>
+
+                                <a class="btn btn-outline-danger btn-sm m-2 deleteBtn">Delete</a>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <h3>{{user.user.first_name}} {{user.user.last_name}}</h3>
+                            <p>Email: {{user.user.email}}</p>
+                            <p>Address: {{user.address}}</p>
+                            <p>Contact: {{user.phone}}</p>
+                            <p>Service: {{user.service.service_name}}</p>
+                        </div>
                     </div>
                 </div>
+            </div>
+                
 
                 {% endfor %}
 
-            </div>
-        </div>
-    </div>
-
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
-    </button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Do you sure wanna delete this??
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
             </div>
         </div>
     </div>
@@ -131,3 +135,33 @@
 </div>
 
 {% endblock body %}
+
+{% block js%}
+<script>
+    $(document).ready(function () {
+        $('.deleteBtn').on('click', function () {
+            $.confirm({
+                title: 'Confirmation Box!',
+                content: 'Do you want to delete?',
+                type: 'red',
+                typeAnimated: true,
+                buttons: {
+                    cancel: {
+                        btnClass: 'btn-primary',
+                        action: function () {
+                            $.alert('Cancelled!');
+                        }
+                    },
+                    delete: {
+                        btnClass: 'btn-danger',
+                        action: function () {
+                            $.alert('Deleted!');
+                        }
+                    }
+                }
+            });
+        });
+
+    });
+</script>
+{% endblock js %}
