--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -55,6 +55,7 @@
         <div class="col-md-9">
             <div class="row">
                 <h2 class="text-center"><a>{{category}} ({{count}})</h2>
+
                 {% for service in services %}
                 <div class="col-md-4">
                     <div class="card my-2">
@@ -64,17 +65,42 @@
                         </div>
                         <a href="/services/{{service.service_id}}" class="btn btn-outline-primary btn-sm m-1">Quick
                             View</a>
-                        <button class="btn btn-outline-danger btn-sm m-1 deleteBtn">Delete</button>
+                        <button class="btn btn-outline-danger btn-sm m-1" data-bs-toggle="modal"
+                            data-bs-target="#deleteService">Delete</button>
 
+                    </div>
+                </div>
+
+                <!-- Modal -->
+                <div class="modal fade" id="deleteService" tabindex="-1" aria-labelledby="deleteServiceLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Do you want to delete??
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <a href="/deleteService/{{service.service_id}}" type="button"
+                                    class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 {% endfor %}
 
+
+
                 {% for customer in customers %}
-                
+
                 <div class="col-md-6">
-                        <div class="card card-body my-2">
+                    <div class="card card-body my-2">
                         <div class="row">
                             <div class="col-md-4">
                                 <div>
@@ -83,8 +109,8 @@
                                     <p class="text-center">@{{customer.user.username}}</p>
                                 </div>
                                 <div>
-
-                                    <a class="btn btn-outline-danger btn-sm m-2 deleteBtn">Delete</a>
+                                    <button class="btn btn-outline-danger btn-sm m-1" data-bs-toggle="modal"
+                                        data-bs-target="#deleteCustomer">Delete</button>
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -97,34 +123,76 @@
                     </div>
                 </div>
 
+                <!-- Modal -->
+                <div class="modal fade" id="deleteCustomer" tabindex="-1" aria-labelledby="deleteCustomerLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Do you want to delete this customer??
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <a href="/deleteCustomer/{{customer.id}}" type="button"
+                                    class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 {% endfor %}
 
                 {% for user in users %}
                 <div class="col-md-6">
                     <div class="card card-body my-2">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div>
 
-                                <img src="{{user.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
-                                <p class="text-center">@{{user.user.username}}</p>
+                                    <img src="{{user.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
+                                    <p class="text-center">@{{user.user.username}}</p>
+                                </div>
+                                <div>
+                                    <button class="btn btn-outline-danger btn-sm m-1" data-bs-toggle="modal"
+                                        data-bs-target="#deleteUser">Delete</button>
+                                </div>
                             </div>
-                            <div>
-
-                                <a class="btn btn-outline-danger btn-sm m-2 deleteBtn">Delete</a>
+                            <div class="col-md-8">
+                                <h3>{{user.user.first_name}} {{user.user.last_name}}</h3>
+                                <p>Email: {{user.user.email}}</p>
+                                <p>Address: {{user.address}}</p>
+                                <p>Contact: {{user.phone}}</p>
+                                <p>Service: {{user.service.service_name}}</p>
                             </div>
-                        </div>
-                        <div class="col-md-8">
-                            <h3>{{user.user.first_name}} {{user.user.last_name}}</h3>
-                            <p>Email: {{user.user.email}}</p>
-                            <p>Address: {{user.address}}</p>
-                            <p>Contact: {{user.phone}}</p>
-                            <p>Service: {{user.service.service_name}}</p>
                         </div>
                     </div>
                 </div>
-            </div>
-                
+
+                <!-- Modal -->
+                <div class="modal fade" id="deleteUser" tabindex="-1" aria-labelledby="deleteUserLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Do you want to delete this Service man??
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <a href="/deleteUser/{{user.id}}" type="button" class="btn btn-danger">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 {% endfor %}
 
@@ -137,31 +205,5 @@
 {% endblock body %}
 
 {% block js%}
-<script>
-    $(document).ready(function () {
-        $('.deleteBtn').on('click', function () {
-            $.confirm({
-                title: 'Confirmation Box!',
-                content: 'Do you want to delete?',
-                type: 'red',
-                typeAnimated: true,
-                buttons: {
-                    cancel: {
-                        btnClass: 'btn-primary',
-                        action: function () {
-                            $.alert('Cancelled!');
-                        }
-                    },
-                    delete: {
-                        btnClass: 'btn-danger',
-                        action: function () {
-                            $.alert('Deleted!');
-                        }
-                    }
-                }
-            });
-        });
 
-    });
-</script>
 {% endblock js %}
