Admin Panel Modified

--- a/templates/add_service.html
+++ b/templates/add_service.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin_nav.html' %}
 {% load static %}
 {% block title %} Add Service {% endblock title %}
 {% block css %}
