--- a/templates/base.html
+++ b/templates/base.html
@@ -38,15 +38,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {% if user.is_superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'admin_home' %}">Home</a>
-                    </li>
-                    {% else %}
+
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
@@ -56,15 +51,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="/admin">Admin</a>
-                    </li>
-                    {% if user.is_superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user_profile">User Profile</a>
-                    </li>
-                    {% endif %}
-
+                   
 
                 </ul>
                 <form class="d-flex" action="/search" method="GET">
@@ -83,11 +70,12 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="userid">
                             {% if user.is_superuser%}
+                            <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
 
                             {% else %}
                             <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                            {% endif %}
                             <a class="dropdown-item" href="{% url 'tracker' %}">Tracker</a>
+                            {% endif %}
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
 
                         </ul>
