--- a/templates/service_view.html
+++ b/templates/service_view.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block title %} {{service.service_name}} {% endblock title %}
 
+{% block css %}
+
+{% endblock css %}
+
 {% block body %}
 <div class="container-fluid">
 
