--- a/templates/services.html
+++ b/templates/services.html
@@ -3,10 +3,14 @@
 {% block title %} Services {% endblock title %}
 {% block css %}
 <style>
-    .image-thumbnail{
+    .image-thumbnail {
         display: block;
         height: 26vh;
-        
+
+    }
+
+    .card-row {
+        justify-content: flex-start;
     }
 </style>
 {% endblock css %}
@@ -39,10 +43,10 @@
         </div>
     </div>
     <div class="main-box container">
-        <div class="row">
+        <div class="row card-row">
 
             {% for i in services %}
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
 
                 <div class="card my-2">
                     <img class="card-img-top image-thumbnail w-75 m-auto" src="/media/{{i.image}}" alt="Services">
@@ -52,7 +56,7 @@
                         <a href="/services/{{i.service_id}}" class="btn btn-primary">Quick View</a>
                         {% if user.is_authenticated %}
                         <a href="/book_service/" class="btn btn-primary">Book Now</a>
-                        
+
                         {% else %}
                         <button href="#" class="btn btn-primary" disabled>Login To Book</button>
                         {% endif %}
@@ -60,7 +64,7 @@
                     </div>
                 </div>
             </div>
-                {% endfor %}
+            {% endfor %}
 
         </div>
 
