--- a/templates/admin/allservices.html
+++ b/templates/admin/allservices.html
@@ -22,6 +22,14 @@
 <div class="container mt-2">
     <h2 class="text-center mb-3 text-primary">Our Services</h2>
     <hr>
+    <div class="row">
+
+        <div class="col-md-10"> &nbsp;</div>
+        <div class="col-md-2">
+            <a href="{% url 'add_service' %}" class="btn btn-outline-primary">Add Service</a>
+        </div>
+
+    </div>
     {% include '../messages.html' %}
 
 
