--- a/templates/admin/admin_nav.html
+++ b/templates/admin/admin_nav.html
@@ -22,6 +22,11 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic&display=swap');
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
         body {
             font-family: 'Carrois Gothic', sans-serif;
@@ -87,7 +92,7 @@
                 <a href="{% url 'index' %}" class="text-white text-uppercase text-decoration-none"> GharSewa </a>
             </div>
             <div class="list-group list-group-flush bg-dark">
-                <a class="list-group-item list-group-item-action list-group-item-dark p-3" href="{% url 'dashboard' %}">
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'dashboard' %}">
                     Dashboard
                 </a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3"
@@ -101,11 +106,14 @@
                     href="{% url 'allcustomers' %}">
                     Customers
                 </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'city_list' %}">
                     City
                 </a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'feedback' %}">
                     Messages
+                </a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'admin_booking' %}">
+                    Booking Details
                 </a>
 
             </div>
@@ -189,6 +197,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    {% block js%}
+    {% endblock %}
     <script>
 
         window.addEventListener('DOMContentLoaded', event => {
@@ -210,8 +220,7 @@
         });
 
     </script>
-    {% block js%}
-    {% endblock %}
+    
 </body>
 
 </html>
