--- a/templates/base.html
+++ b/templates/base.html
@@ -51,13 +51,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact</a>
                     </li>
-                   
+
 
                 </ul>
                 <form class="d-flex" action="/search" method="GET">
-                    <input class="form-control me-2" type="search" name="search" id="search" placeholder="Search"
+                    <input class="form-control me-2" type="search" name="search" id="search" placeholder="Search for Service Provider"
                         aria-label="Search" required>
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
+                    <button class="btn btn-outline-primary" type="submit">Search </button>
                 </form>
                 <div class="m-2">
 
@@ -77,7 +77,12 @@
                             <a class="dropdown-item" href="{% url 'tracker' %}">Tracker</a>
                             {% endif %}
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-
+                            {% if not user.is_superuser%}
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <a class="dropdown-item" href="{% url 'booking_details' %}">Booking Details</a>
+                            {% endif %}
                         </ul>
                     </span>
 
