--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
-{% block title %} Login {% endblock title %}
+{% block title %} Login/Register {% endblock title %}
 
 {% block body %}
 <div class="container-fluid my-3">
 
+    <!-- Login Page -->
     {% if page == 'login' %}
     <div class="container d-flex flex-column w-75 cover-height">
 
@@ -34,8 +35,9 @@
         </div>
     </div>
 
+    <!-- User Register -->
     {% elif page == 'user_register' %}
-    <div class="container cover-height">
+    <div class="container my-2">
 
         <h2>Welcome User, Please Register</h2>
 
@@ -61,20 +63,19 @@
                 </div>
             </div>
             <div class="form-group">
-
                 <label for="user_email">Email address</label>
                 <input type="email" class="form-control" id="user_email" name="user_email"
                     placeholder="name@example.com">
-            </div>
 
+            </div>
 
             <div class="form-group my-2">
                 <div class="row">
                     <div class="col">
-
-                        <label>Address</label>
+                        <label>Full Address</label>
                         <input type="text" class="form-control" id="user_address" name="user_address"
                             placeholder="Enter Address">
+
                     </div>
                     <div class="col">
 
@@ -83,8 +84,11 @@
                             placeholder="Enter Phone Number">
                     </div>
 
+
                 </div>
             </div>
+
+
             <div class="form-group my-2">
                 <div class="row">
                     <div class="col">
@@ -101,19 +105,41 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label>Select the Service</label>
-                <select class="form-select" aria-label="Default select example" name="service" id="service">
-                    <option value="none">Select Service</option>
+            <div class="form-group mb-2">
+                <div class="row">
+                    <div class="col">
+                        <label>Select the Service</label>
+                        <select class="form-select" aria-label="Default select example" name="service" id="service">
+                            <option value="none">Select Service</option>
 
-                    {% for service in services %}
+                            {% for service in services %}
 
-                    <option value="{{service.service_id}}">{{service}}</option>
+                            <option value="{{service.service_id}}">{{service}}</option>
 
-                    {% endfor %}
-                </select>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col">
+                        <label>Experience: (In years)</label>
+                        <input type="number" name="exp" class="form-control" placeholder="In Numbers">
+                    </div>
+                    <div class="col">
+                        <label>Choose your working location: </label>
+                        <select class="form-select" aria-label="Default select example" name="city" id="city">
+                            <option value="none">Select Location</option>
+
+                            {% for i in city %}
+
+                            <option value="{{i.id}}">{{i}}</option>
+
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+
             </div>
-            
+
+
             <div class="form-group my-2">
                 <label>Upload Image</label>
                 <input type="file" name="image" id="image">
@@ -121,9 +147,14 @@
             <button type="submit" class="btn btn-primary">Submit</button>
 
         </form>
-        <div>Already Have An Account? <a href="/login">Login</a>
+        <div>
+            Already Have An Account? <a href="/login">Login</a>
         </div>
     </div>
+
+
+    <!-- Customer Register -->
+
     {% elif page == "customer_register" %}
     <div class="cover-height container">
 
@@ -196,12 +227,16 @@
 
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <div>Already Have An Account? <a href="/login">Login</a>
+        <div>
+            Already Have An Account? <a href="/login">Login</a>
 
         </div>
     </div>
 
     {% else %}
+
+    <!-- Admin Register -->
+
     <div class="container cover-height">
 
         <h2>Welcome Admin, Please Register</h2>
@@ -234,7 +269,7 @@
                     placeholder="name@example.com">
             </div>
 
-            
+
             <div class="form-group my-2">
                 <div class="row">
                     <div class="col">
@@ -245,12 +280,11 @@
                     <div class="col">
 
                         <label for="pw2">Confirm Password</label>
-                        <input type="password" class="form-control" id="pw2" name="pw2"
-                            placeholder="Confirm Password">
+                        <input type="password" class="form-control" id="pw2" name="pw2" placeholder="Confirm Password">
                     </div>
                 </div>
             </div>
-            
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
