--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
 <div class="container my-3 cover-height">
 
     <h2>Search Results:- </h2>
-
+    {% if page %}
     {% if service|length < 1 %} <p>No Search Result</p>
         Your search query : <b>{{query}}</b> did not match any documents. <br>
         Suggestions:
@@ -20,18 +20,75 @@
             </li>
         </ul>
         {% endif %}
+
         <div class="main-box container">
-        {% for i in service %}
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/media/{{i.image}}" alt="Services">
-            <div class="card-body text-center">
-                <h5 class="card-title">{{i.service_name}}</h5>
-                <p class="card-text">{{i.service_desc|truncatechars:80}}</p>
-                <a href="#" class="btn btn-primary">Book Now</a>
+            {% for i in service %}
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/media/{{i.image}}" alt="Services">
+                <div class="card-body text-center">
+                    <h5 class="card-title">{{i.service_name}}</h5>
+                    <p class="card-text">{{i.service_desc|truncatechars:80}}</p>
+                    <a href="#" class="btn btn-primary">Book Now</a>
+                </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-</div>
+
+        {% else %}
+
+        {% if users|length < 1 %} 
+        <div class="my-2">
+
+        <p>No Search Result</p>
+            Your search query did not match any documents<br>
+            Service Provider unavailable on that areas <br>
+            Suggestions:
+            <ul>
+                <li>Make sure that all words are spelled correctly.</li>
+                <li>Try to enter correct city</li>
+                <li>Try to enter correct service</li>
+                <li>Try more general keywords.</li>
+                <li> Try fewer keywords.</li>
+                <li> Try different keywords.</li>
+                </li>
+            </ul>
+        </div>
+
+        {% else %}
+        
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="text-center">Service Provider-details: </h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                {% for user in users %}
+                                <p>Service: {{user.service.service_name}}</p>
+                                <p>Location: {{user.city.city}}</p>
+                                <div class="col-md-8 p-0 mx-auto">
+                                    <img src="{{user.image.url}}" alt="Customer Image" width="150px" height="150px">
+                                    <h6 class="text-danger"><u> Service Provider details</u></h6>
+                                    <p class="m-0">Full Name: {{user.user.first_name}} {{book.user.user.last_name}}</p>
+                                    <p class="m-0">Contact: {{user.phone}}</p>
+                                    <p class="m-0">Address: {{user.address}}</p>
+                                    <p class="m-0">City: {{user.city.city}}</p>
+                                    <p class="m-0">Service: {{user.service.service}}</p>
+                                    <p class="m-0">Experience: {{user.experience}} years</p>
+                                </div>
+                                {% endfor %}
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {% endif %}
+
+
+            {% endif %}
 
 </div>
 {% endblock %}
