--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -63,8 +63,8 @@
 
                 </div>
                 <hr>
-                <h5 class="text-center"><a href="{% url 'allcustomers' %}" class="card-box-footer text-dark">View More <i
-                            class="fa fa-arrow-circle-right"></i></a></h5>
+                <h5 class="text-center"><a href="{% url 'allcustomers' %}" class="card-box-footer text-dark">View More
+                        <i class="fa fa-arrow-circle-right"></i></a></h5>
 
             </div>
         </div>
