--- a/templates/admin/admin_nav.html
+++ b/templates/admin/admin_nav.html
@@ -1,192 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Ghar Sewa | Admin Panel</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Panel</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/admin_style.css">
 
 
-    {% block css%}
-    {% endblock css %}
+    <script src="/static/js/script.js" type="text/javascript"></script>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic&display=swap');
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Carrois Gothic', sans-serif;
-        }
-
-        #wrapper {
-            overflow-x: hidden;
-        }
-
-        #sidebar-wrapper {
-            min-height: 100vh;
-            margin-left: -15rem;
-            -webkit-transition: margin 0.25s ease-out;
-            -moz-transition: margin 0.25s ease-out;
-            -o-transition: margin 0.25s ease-out;
-            transition: margin 0.25s ease-out;
-
-        }
-
-        #sidebar-wrapper .sidebar-heading {
-            padding: 0.875rem 1.25rem;
-            font-size: 1.2rem;
-        }
-
-        #sidebar-wrapper .list-group {
-            width: 15rem;
-        }
-
-        #page-content-wrapper {
-            min-width: 100vw;
-        }
-
-        body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
-            margin-left: 0;
-        }
-
-        @media (min-width: 768px) {
-            #sidebar-wrapper {
-                margin-left: 0;
-            }
-
-            #page-content-wrapper {
-                min-width: 0;
-                width: 100%;
-            }
-
-            body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
-                margin-left: -15rem;
-            }
-        }
-
-        body {
-            overflow-x: hidden;
-        }
-    </style>
+    {% block css %}
+    {% endblock %}
 </head>
 
 <body>
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar-->
-        <div class="border-end bg-white overflow-hidden" id="sidebar-wrapper">
-            <div class="sidebar-heading border-bottom bg-dark text-white">
-                <a href="{% url 'index' %}" class="text-white text-uppercase text-decoration-none"> GharSewa </a>
-            </div>
-            <div class="list-group list-group-flush bg-dark">
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'dashboard' %}">
-                    Dashboard
-                </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3"
-                    href="{% url 'allservices' %}">
-                    Services
-                </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'allusers' %}">
-                    Service Providers
-                </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3"
-                    href="{% url 'allcustomers' %}">
-                    Customers
-                </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'city_list' %}">
-                    City
-                </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'feedback' %}">
-                    Messages
-                </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'admin_booking' %}">
-                    Booking Details
-                </a>
 
-            </div>
-            <hr>
-
-            <div class="position-absolute bottom-0 m-3">
-                <div>
-                    <h5>Logged in as:</h5>
-                    Mr. {{request.user}}
-                </div>
-            </div>
+    <!-- header starts here -->
+    <header class="admin_header">
+        <span class="burger" onclick="sideBar()">
+            <i class="fas fa-bars"></i>
+        </span>
+        <div class="left_area">
+            <h3>Ghar<span>Sewa</span></h3>
 
         </div>
-
-        <!-- Page content wrapper-->
-        <div id="page-content-wrapper">
-
-
-            <!-- Top navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
-                <div class="container-fluid">
-                    <img src="{% static '/img/burger.jpg' %}" alt="Burger Icon" id="sidebarToggle" class="btn">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-
-                        <span class="navbar-toggler-icon"></span>
-
-                    </button>
-
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Welcome {{request.user}}
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="{% url 'admin_profile' %}">Profile</a>
-
-                                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                                    <div class="dropdown-divider">
-
-                                    </div>
-                                    <a class="dropdown-item" href="{% url 'index' %}">Go to website</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-
-            <!-- Page content-->
-            <div class="container-fluid">
-
-                <!-- Body Content -->
-                {% block body %}
-
-                {% endblock %}
-                <!-- Body Content End -->
-
-                <!-- Footer -->
-                <footer class=" container-fluid position-relative bottom-0">
-
-                    <hr>
-                    <p class="text-center" style="font-family: 'Carrois Gothic', sans-serif;">© 2020 GharSewa. All
-                        Rights Reserved</a> </p>
-                </footer>
-            </div>
+        <div class="right-area">
+            <a href="{% url 'index' %}" class="website btn-sm btn-primary">
+                Site
+            </a>
         </div>
+    </header>
+    <!-- header ends here -->
+
+    <!-- sidebar starts here -->
+    <div class="sidebar active">
+        <center>
+            <img src="/static/img/dummy-profile.jpg" alt="profile photo" class="profile_img">
+            <h4>Mr. {{request.user|title}}</h4>
+        </center>
+
+        <a href="{% url 'dashboard' %}">
+            <i class="fas fa-desktop"></i> <span>Dashboard</span>
+        </a>
+
+        <a href="{% url 'allservices' %}">
+            <i class="fas fa-cogs"></i>
+            <span>Services</span>
+        </a>
+        <a href="{% url 'allusers' %}">
+            <i class="fas fa-user"></i>
+            <span>Service Providers</span>
+        </a>
+        <a href="{% url 'allcustomers' %}">
+            <i class="fas fa-users"></i> <span>Customers</span>
+        </a>
+        <a href="{% url 'city_list' %}">
+            <i class="fas fa-city"></i> <span>Locations</span>
+        </a>
+        <a href="{% url 'feedback' %}">
+            <i class="fas fa-comment"></i> <span>Messages</span>
+        </a>
+        <a href="{% url 'admin_booking' %}">
+            <i class="fas fa-bookmark"></i> <span>Booking Details</span>
+        </a>
+        <a href="{% url 'admin_profile' %}">
+            <i class="fas fa-user-circle"></i> <span>Profile</span>
+        </a>
+        <a href="{% url 'logout' %}">
+            <i class="fas fa-sign-out-alt"></i> <span>Log Out</span>
+        </a>
+    </div>
+    <!-- sidebar endshere -->
+
+    <div class="content active">
+        {% block body %}
+
+        {% endblock %}
+
     </div>
 
     <!-- jquery -->
@@ -197,30 +94,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    {% block js%}
-    {% endblock %}
-    <script>
 
-        window.addEventListener('DOMContentLoaded', event => {
+        {% block js %}
 
-            // Toggle the side navigation
-            const sidebarToggle = document.body.querySelector('#sidebarToggle');
-            if (sidebarToggle) {
-                // Uncomment Below to persist sidebar toggle between refreshes
-                if (localStorage.getItem('sb|sidebar-toggle') === 'true') {
-                    document.body.classList.toggle('sb-sidenav-toggled');
-                }
-                sidebarToggle.addEventListener('click', event => {
-                    event.preventDefault();
-                    document.body.classList.toggle('sb-sidenav-toggled');
-                    localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
-                });
-            }
-
-        });
-
-    </script>
-    
+        {% endblock %}
 </body>
 
 </html>
