--- a/templates/admin/allservices.html
+++ b/templates/admin/allservices.html
@@ -26,7 +26,7 @@
 
         <div class="col-md-10"> &nbsp;</div>
         <div class="col-md-2">
-            <a href="{% url 'add_service' %}" class="btn btn-outline-primary">Add Service</a>
+            <a href="{% url 'add_service' %}" class="btn btn-outline-primary mb-3">Add Service</a>
         </div>
 
     </div>
@@ -34,7 +34,7 @@
 
 
     <table class="table table-hover table-bordered">
-        <thead class="table-secondary">
+        <thead class="table-dark">
             <tr>
                 <th scope="col">S.N.</th>
                 <th scope="col">Service Name</th>
