--- a/templates/admin/city_list.html
+++ b/templates/admin/city_list.html
@@ -38,8 +38,6 @@
         padding: 0.5rem;
     }
 
-    
-
     .hidden {
         display: none;
     }
@@ -57,7 +55,7 @@
 
     </div>
     <div class="container my-3">
-        <button class="btn btn-sm btn-outline-secondary" id="addCity"> Add City</button>
+        <button class="btn btn-sm btn-primary" id="addCity"> Add City</button>
         <div class="w-50 mx-auto"> {% include 'messages.html' %}</div>
         <div class="row" id="locations">
 
@@ -66,7 +64,9 @@
                     <tr>
                         <th scope="col">S.N</th>
                         <th scope="col">City Location</th>
-                        <th><center>Action</center></th>
+                        <th>
+                            <center>Action</center>
+                        </th>
 
                     </tr>
                 </thead>
@@ -76,8 +76,9 @@
                         <th scope="row">{{forloop.counter}}</th>
                         <td>{{i.city}}</td>
                         <td>
-                           <center><a href="{% url 'delete_city' i.id %}"><button class="btn btn-sm btn-danger" onclick="return confirm('Are you sure ?')"><i
-                                        class="fa fa-trash"></i></button></a></center>
+                            <center><a href="{% url 'delete_city' i.id %}"><button class="btn btn-sm btn-danger"
+                                        onclick="return confirm('Are you sure ?')"><i
+                                            class="fa fa-trash"></i></button></a></center>
 
                         </td>
 
@@ -89,7 +90,7 @@
         </div>
 
         <div class="row hidden mx-auto w-50" id="city">
-            <div class="card">
+            <div class="card p-0">
                 <div class="card-header bg-dark">
                     <h3 class="text-white text-center"> Add City </h3>
                 </div>
@@ -100,7 +101,7 @@
                         {% csrf_token %}
                         <div class="form-group">
                             <label>Enter City Name:: </label>
-                            <input type="text" name="city" placeholder="Enter City">
+                            <input type="text" name="city" placeholder="Enter City" required>
 
                         </div>
                         <button type="submit" class="btn btn-sm btn-outline-success m-2">Add City</button>
@@ -108,13 +109,12 @@
                     </form>
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
 
 {% endblock %}
+
 {% block js%}
 <script>
 
