--- a/templates/admin/feedback.html
+++ b/templates/admin/feedback.html
@@ -9,6 +9,7 @@
 
 {% block body %}
 <div class="container my-4">
+    {% include 'messages.html' %}
     <h2 class="text-center text-primary">Feedbacks</h2>
     <hr>
     <div>
@@ -20,6 +21,8 @@
                     <th scope="col">Email</th>
                     <th scope="col">Phone Number</th>
                     <th scope="col">Issue</th>
+                    <th scope="col">Action</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -30,6 +33,15 @@
                     <td>{{i.email}}</td>
                     <td>{{i.phone}}</td>
                     <td>{{i.content}}</td>
+                    <td>
+                        <a href="{% url 'deleteFeedback' i.sno %}" class="m-1">
+                            <button class="btn-sm btn-danger"
+                                onclick="return confirm('Do you want to delete this feedback?')">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </a>
+                    </td>
+                    
                 </tr>
                 {% endfor %}
                 <caption>*From Contact Form of GharSewa</caption>
