--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
     {% block css %}
     {% endblock css %}
 
@@ -28,36 +33,43 @@
 
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1c2331;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">GharSewa</a>
+            <a class="navbar-brand" href="/"><img src="{% static 'img/logo.png' %}" style="width: 100px;" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-weight: 600;">
 
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link active" aria-current="page" href="/"> <i class="fa fa-home"
+                                style="padding-right: 5px;"></i>Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="/about"><i class="fa fa-file"
+                                style="padding-right: 5px;"></i>About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/services">Services</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="/services"><i class="fa fa-car"
+                                style="padding-right: 5px;"></i>Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="{% url 'search_user' %}"><i class="fa fa-search"
+                                style="padding-right: 5px;"></i>Search Service Provider</a>
                     </li>
-
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="/contact"><i class="fa fa-phone"
+                                style="padding-right: 5px;"></i>Contact</a>
+                    </li>
 
                 </ul>
                 <form class="d-flex" action="/search" method="GET">
-                    <input class="form-control me-2" type="search" name="search" id="search" placeholder="Search for Service Provider"
-                        aria-label="Search" required>
-                    <button class="btn btn-outline-primary" type="submit">Search </button>
+                    <input class="form-control me-2" type="search" name="search" id="search"
+                        placeholder="Search Services" aria-label="Search" required>
+                    <button class="btn btn-outline-primary" type="submit"><i class="fa fa-search"></i></button>
                 </form>
                 <div class="m-2">
 
@@ -74,7 +86,6 @@
 
                             {% else %}
                             <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                            <a class="dropdown-item" href="{% url 'tracker' %}">Tracker</a>
                             {% endif %}
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                             {% if not user.is_superuser%}
@@ -110,7 +121,7 @@
     <!-- End of Nav Bar -->
 
     {% if messages %}
-    {% for message in messages%}
+    {% for message in messages %}
     <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
         <strong>GharSewa says :- </strong> {{message}}.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -120,12 +131,56 @@
     {% block body %}{% endblock body %}
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="copyright p-2">
-            &copy; Copyright <strong><span>GharSewa</span></strong>. All Rights Reserved
+
+    <footer class="text-white" style="background-color: #1c2331;">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4">
+                    <h5 class="text-uppercase fw-bold">Ghar Sewa</h5>
+                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                        style="width: 123px; background-color: #7c4dff; height: 2px" />
+                    <p>
+                        The vision of Ghar Sewa is to serve all the customers requirement services and improve the
+                        quality of
+                        people's lives through technology solutions by providing quality services at their
+                        doorsteps.
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5 class="text-uppercase fw-bold">Useful links</h5>
+                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                        style="width: 138px; background-color: #7c4dff; height: 2px" />
+                    <p>
+                        <a href="#!" class="text-white">Home</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Services</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Contact Us</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Pricing</a>
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5 class="text-uppercase fw-bold">Contact</h5>
+                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                        style="width: 80px; background-color: #7c4dff; height: 2px" />
+                    <p><i class="fa fa-home mr-3"></i> Koteshwor-35, Kathmandu</p>
+                    <p><i class="fa fa-envelope mr-3"></i> gharsewa34@gmail.com</p>
+                    <p><i class="fa fa-phone mr-3"></i> 01 - 234 567</p>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2021 Ghar Sewa. All Rights Reserved.
         </div>
     </footer>
-    <!-- End Footer -->
+
+    <!-- End of footer -->
 
 
     <!-- Optional JavaScript -->
