--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Booking {% endblock %}
 {% block body %}
-<div class="container">
-
+<div class="container mt-3">
     <div class="card">
         <div class="card-header">
             <h3 class="text-center">Service and Service Provider to be booked:: </h3>
@@ -11,11 +10,9 @@
             <div class="col-md-4">
                 <h6 class="text-danger"><u> Service details</u></h6>
                 <h2 class="card-title">{{serv.service.service_name}}</h2>
-
-
             </div>
             <div class="col-md-1 m-3">
-                <h1> ==> </h1>
+                <h1> => </h1>
             </div>
             <div class="col-md-6 p-0 m-0">
                 <h6 class="text-danger"><u> Service Provider details</u></h6>
@@ -45,25 +42,25 @@
             {% csrf_token %}
             <div class="form-group mt-2">
                 <label>Name</label>
-                <input type="text" class="form-control" name="name" placeholder="Enter Name" value="{{customer.user.first_name}} {{customer.user.last_name}}">
+                <input type="text" class="form-control" name="name" placeholder="Enter Name" value="{{customer.user.first_name}} {{customer.user.last_name}}" required>
             </div>
             <div class="form-group my-2">
                 <label>Contact</label>
-                <input type="tel" class="form-control" name="phone" placeholder="Enter Phone" value="{{customer.phone}}">
+                <input type="tel" class="form-control" name="phone" placeholder="Enter Phone" value="{{customer.phone}}" required>
             </div>
             <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" name="address" placeholder="Enter address">
+                <input type="text" class="form-control" name="address" placeholder="Enter address" required>
             </div>
             <div class="form-group mt-2">
                 <div class="row">
                     <div class="col">
                         <label>Date</label>
-                        <input type="date" class="form-control" name="date" placeholder="Enter Name">
+                        <input type="date" class="form-control" name="date" placeholder="Enter Date" required>
                     </div>
                     <div class="col">
                         <label>Day</label>
-                        <select class="form-control" name="day">
+                        <select class="form-control" name="day" required>
                             <option>Select Days</option>
                             <option>1</option>
                             <option>2</option>
@@ -76,7 +73,7 @@
                     </div>
                     <div class="col">
                         <label>Hour</label>
-                        <select class="form-control" name="hour" required="">
+                        <select class="form-control" name="hour" required>
                             <option>Select Hours</option>
                             <option>1-2</option>
                             <option>2-4</option>
