--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 
 <head>
     <meta charset="UTF-8">
@@ -8,50 +9,63 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>GharSewa | Edit Profile</title>
 
-    <style>
+    <!-- <style>
         .container {
             height: 85vh;
         }
-    </style>
+    </style> -->
 </head>
 
 
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1c2331;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">GharSewa</a>
+            <a class="navbar-brand" href="/"><img src="{% static 'img/logo.png' %}" style="width: 100px;" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-weight: 600;">
 
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link active" aria-current="page" href="/"> <i class="fa fa-home"
+                                style="padding-right: 5px;"></i>Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="/about"><i class="fa fa-file"
+                                style="padding-right: 5px;"></i>About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/services">Services</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="/services"><i class="fa fa-car"
+                                style="padding-right: 5px;"></i>Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact</a>
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="{% url 'search_user' %}"><i class="fa fa-search"
+                                style="padding-right: 5px;"></i>Search Service Provider</a>
                     </li>
-
+                    <li class="nav-item" style="margin-left: 15px;">
+                        <a class="nav-link" href="/contact"><i class="fa fa-phone"
+                                style="padding-right: 5px;"></i>Contact</a>
+                    </li>
 
                 </ul>
                 <form class="d-flex" action="/search" method="GET">
-                    <input class="form-control me-2" type="search" name="search" id="search" placeholder="Search"
-                        aria-label="Search" required>
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" name="search" id="search"
+                        placeholder="Search Services" aria-label="Search" required>
+                    <button class="btn btn-outline-primary" type="submit"><i class="fa fa-search"></i></button>
                 </form>
                 <div class="m-2">
+
+                    {% if user.is_authenticated %}
 
                     <span class="dropdown">
                         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="userid"
@@ -59,20 +73,53 @@
                             Welcome {{request.user}}
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="userid">
+                            {% if user.is_superuser%}
+                            <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
 
+                            {% else %}
                             <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                            <a class="dropdown-item" href="{% url 'tracker' %}">Tracker</a>
+                            {% endif %}
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-
+                            {% if not user.is_superuser%}
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <a class="dropdown-item" href="{% url 'booking_details' %}">Booking Details</a>
+                            {% endif %}
                         </ul>
                     </span>
 
+                    {% else %}
+                    <a href="{% url 'login' %}" class="btn btn-primary mx-2" type="button">Login</a>
+
+                    <span class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Sign up
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <a class="dropdown-item" href="{% url 'user_register' %}">User</a>
+                            <a class="dropdown-item" href="{% url 'customer_register' %}">Customer</a>
+                        </ul>
+                    </span>
                 </div>
 
+                {% endif %}
             </div>
+
+        </div>
         </div>
     </nav>
     <!-- End of Nav Bar -->
+
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <strong>GharSewa says :- </strong> {{message}}.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
 
 
     <div class="container my-3">
@@ -143,6 +190,19 @@
             </div>
 
             {% if page %}
+            <div class="form-group my-2 row">
+                <div class="col-md-6">
+                    <label>Upload Certificate</label>
+                    <input type="file" name="cert" id="cert">
+
+                </div>
+                <div class="col-md-6">
+                    <label>Current Certificate</label>
+                    <img src="{{user.cert.url}}" style="width:100px;height:110px">
+                </div>
+
+
+            </div>
 
             <div class="form-group mb-2">
                 <div class="row">
@@ -188,11 +248,56 @@
 
     </div>
     <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="copyright p-1 text-white bg-dark">
-            <h5 class='text-center'>&copy; Copyright <strong><span>GharSewa</span></strong>. All Rights Reserved</h5>
+
+    <footer class="text-white" style="background-color: #1c2331;">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4">
+                    <h5 class="text-uppercase fw-bold">Ghar Sewa</h5>
+                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                        style="width: 123px; background-color: #7c4dff; height: 2px" />
+                    <p>
+                        The vision of Ghar Sewa is to serve all the customers requirement services and improve the
+                        quality of
+                        people's lives through technology solutions by providing quality services at their
+                        doorsteps.
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5 class="text-uppercase fw-bold">Useful links</h5>
+                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                        style="width: 138px; background-color: #7c4dff; height: 2px" />
+                    <p>
+                        <a href="#!" class="text-white">Home</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Services</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Contact Us</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-white">Pricing</a>
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5 class="text-uppercase fw-bold">Contact</h5>
+                    <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                        style="width: 80px; background-color: #7c4dff; height: 2px" />
+                    <p><i class="fa fa-home mr-3"></i> Koteshwor-35, Kathmandu</p>
+                    <p><i class="fa fa-envelope mr-3"></i> gharsewa34@gmail.com</p>
+                    <p><i class="fa fa-phone mr-3"></i> 01 - 234 567</p>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2021 Ghar Sewa. All Rights Reserved.
         </div>
     </footer>
+
+    <!-- End of footer -->
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
