--- a/templates/services.html
+++ b/templates/services.html
@@ -45,7 +45,7 @@
             <div class="col-md-4 col-sm-12">
 
                 <div class="card my-2">
-                    <img class="card-img-top image-thumbnail w-75 m-auto" src="/media/{{i.image}}" alt="Services">
+                    <img class="card-img-top image-thumbnail w-75 m-auto" src="/media/{{i.image}}" alt="Services" style="height: 250px;">
                     <div class="card-body text-center">
                         <h5 class="card-title">{{i.service_name}}</h5>
                         <p class="card-text">{{i.service_desc|truncatechars:80}}</p>
