--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -15,11 +15,7 @@
 
     <title>GharSewa | Edit Profile</title>
 
-    <!-- <style>
-        .container {
-            height: 85vh;
-        }
-    </style> -->
+   
 </head>
 
 
@@ -97,7 +93,7 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Sign up
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <ul class="dropdown-menu  dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <a class="dropdown-item" href="{% url 'user_register' %}">User</a>
                             <a class="dropdown-item" href="{% url 'customer_register' %}">Customer</a>
                         </ul>
