--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -18,7 +18,7 @@ body{
     height: 9vh;
 }
 
-.left_area h3{
+.left_area h3 a{
     color: #ccc;
     text-transform: uppercase;
     line-height: 1.56;
@@ -123,18 +123,10 @@ body{
     position: absolute;
     top: 10vh;
     z-index: -1;
-    margin-left: 250px;
-    transition: margin-left 0.5s;
     width: 100%;
-    transition: max-width 1s;
-
-}
-
-.content.active{
     margin-left: 40px;
     padding-left: 10px;
+
 }
 
-.content.shrink{
-    max-width: 85%;
-}
+
