--- a/templates/about.html
+++ b/templates/about.html
@@ -29,14 +29,14 @@
   </div>
   <div class="row container">
 
-    <div class="col-md-12 col-lg-3">
+    <div class="col-md-6 col-lg-3">
       <div class="row section-success ourTeam-box text-center">
         <div class="col-md-12 section1">
           <img src="/static/img/about/mk.jpg">
         </div>
         <div class="col-md-12 section2">
           <p>Manoj Khanal</p>
-          <p>Lorem ipsum dolor sit amet, <br>consectetur.</p><br>
+          <p>Project Leader</p>
         </div>
         <div class="col-md-12 section3">
           <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -46,14 +46,14 @@
       </div>
     </div>
 
-    <div class="col-md-12 col-lg-3">
+    <div class="col-md-4 col-lg-3 m-2">
       <div class="row section-success ourTeam-box text-center">
         <div class="col-md-12 section1">
           <img src="/static/img/about/jp.jpg">
         </div>
         <div class="col-md-12 section2">
           <p>Jayanta Poudel</p>
-          <p>Lorem ipsum dolor sit amet, <br>consectetur.</p><br>
+          <p>Projct Assistance</p>
         </div>
         <div class="col-md-12 section3">
           <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -62,14 +62,15 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12 col-lg-3">
+
+    <div class="col-md-4 col-lg-3">
       <div class="row section-success ourTeam-box text-center">
         <div class="col-md-12 section1">
           <img src="/static/img/about/arjun.jpg">
         </div>
         <div class="col-md-12 section2">
           <p>Arjun Shrestha</p>
-          <p>Lorem ipsum dolor sit amet, <br>consectetur.</p><br>
+          <p>Projct Assistance</p>
         </div>
         <div class="col-md-12 section3">
           <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -78,23 +79,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12 col-lg-3">
-      <div class="row section-success ourTeam-box text-center">
-        <div class="col-md-12 section1">
-          <img src="/static/img/about/surya.jpg">
-        </div>
-        <div class="col-md-12 section2">
-          <p>Surya Chandra Basnet</p>
-          <p>Lorem ipsum dolor sit amet, <br>consectetur.</p><br>
 
-        </div>
-        <div class="col-md-12 section3">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-          <i class="fa fa-twitter" aria-hidden="true"></i>
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
