--- a/templates/admin/allcustomers.html
+++ b/templates/admin/allcustomers.html
@@ -1,6 +1,19 @@
 {% extends 'admin/admin_nav.html' %}
+{% block css %}
+<style>
+   
 
+    .imageDiv {
+        height: 88px;
+    }
 
+    .image-thumbnail {
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
+{% endblock %}
 {% block body %}
 <div class="container">
     <h2 class="text-center my-3 text-primary">Our Customers</h2>
@@ -10,18 +23,19 @@
 
         {% for customer in customers %}
 
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 col-xs-6" >
             <div class="card card-body my-2">
                 <div class="row">
                     <div class="col-md-4">
-                        <div>
+                        <div class="imageDiv">
 
                             <img src="{{customer.image.url}}" class="image-thumbnail w-75 m-auto" alt="Photos">
-                            
+
                         </div>
                         <div class="mt-5">
                             <a href="{% url 'deleteCustomer' customer.id %}" class="m-1">
-                                <button class="btn btn-danger" onclick="return confirm('Do you want to delete this item?')">
+                                <button class="btn btn-danger"
+                                    onclick="return confirm('Do you want to delete this item?')">
                                     Delete
                                 </button>
                             </a>
