--- a/templates/admin/allusers.html
+++ b/templates/admin/allusers.html
@@ -4,6 +4,15 @@
     a{
         text-decoration: none;
     }
+    .imageDiv{
+        height: 88px;        
+    }
+
+    .image-thumbnail{
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+    }
 </style>
 {% endblock %}
 
@@ -18,13 +27,13 @@
 
         {% for i in users %}
 
-        <div class="col-md-4 col-sm-6">
-            <div class="card card-body my-2">
+        <div class="col-md-4 col-xs-6">
+            <div class="card card-body my-2" >
                 <div class="row">
-                    <div class="col-md-4">
-                        <div>
+                    <div class="col-md-4" >
+                        <div class="imageDiv">
 
-                            <img src="{{i.image.url}}" class="image-thumbnail w-75 m-auto rounded-circle" alt="Photos">
+                            <img src="{{i.image.url}}" class="image-thumbnail m-auto rounded-circle" alt="Photos">
 
                         </div>
                         <div class="my-4">
@@ -59,14 +68,14 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <h3>{{i.user.first_name}} {{i.user.last_name}}</h3>
-                        <p>Username: @{{i.user.username}}</p>
-                        <p>Email: {{i.user.email}}</p>
-                        <p>Address: {{i.address}}</p>
-                        <p>Contact: {{i.phone}}</p>
-                        <p>Experience: {{i.experience}} years</p>
-                        <p>Status: {{i.status.status}}</p>
-                        <p>Date Joined: {{i.date_joined}} </p>
+                        <h5>{{i.user.first_name}} {{i.user.last_name}}</h5>
+                        <p class="m-0">Username: @{{i.user.username}}</p>
+                        <p class="m-0">Email: {{i.user.email}}</p>
+                        <p class="m-0">Address: {{i.address}}</p>
+                        <p class="m-0">Contact: {{i.phone}}</p>
+                        <p class="m-0">Experience: {{i.experience}} years</p>
+                        <p class="m-0">Status: {{i.status.status}}</p>
+                        <p class="m-0">Date Joined: {{i.date_joined}} </p>
 
                     </div>
                 </div>
