--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
         a {
             text-decoration: none;
         }
+        
     </style>
     {% block css %}
     {% endblock css %}
@@ -122,7 +123,7 @@
 
     {% if messages %}
     {% for message in messages %}
-    <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+    <div class="alert alert-{{message.tags}} alert-dismissible fade show m-0" role="alert">
         <strong>GharSewa says :- </strong> {{message}}.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
