--- a/templates/search.html
+++ b/templates/search.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}Search{% endblock title %}
+
 {% block css %}
 <style>
-
-    .row{
+    .row {
         justify-content: space-around;
     }
 </style>
@@ -65,13 +65,13 @@
         <div class="card">
             <div class="card-header">
                 <h3 class="text-center">Service Provider-details: </h3>
-                
+
             </div>
             <div class="card-body">
                 <div class="row">
                     <h5 class="text-primary">Service: <span class="text-dark">{{serv.service_name}}</span></h5>
                     <h5 class="text-primary">Location: <span class="text-dark">{{ct.city}}</span></h5>
-    
+
                     {% for user in users %}
                     <div class="card d-flex col-md-4 p-1">
                         <div class="col-md-8 mx-auto">
@@ -83,11 +83,11 @@
                             <p class="m-0">City: {{user.city.city}}</p>
                             <p class="m-0">Service: {{user.service.service_name}}</p>
                             <p>Experience: {{user.experience}} years</p>
-                            <span>Certficate: 
-                            <img src="{{user.cert.url}}" alt="Customer Image" width="250px" height="150px">
-                                
+                            <span>Certficate:
+                                <img src="{{user.cert.url}}" alt="Customer Image" width="250px" height="150px">
+
                             </span>
-                            <a href="{% url 'booking' user.id %}" class="btn btn-outline-primary">Book Now</a>
+                            <a href="{% url 'booking' user.user.id %}" class="btn btn-outline-primary">Book Now</a>
                         </div>
                     </div>
                     {% endfor %}
